--- a/googleColab_code/testing_CNN_master.ipynb
+++ b/googleColab_code/testing_CNN_master.ipynb
@@ -6,7 +6,7 @@
       "name": "testing_CNN_master.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPIb0U1P7np0CHM+UeVB4he",
+      "authorship_tag": "ABX9TyORx88cVkaBf/Mn26PX95RX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JulioEI/TBCG_Group12/blob/main/testing_CNN_master.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/JulioEI/TBCG_Group12/blob/main/googleColab_code/testing_CNN_master.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -114,9 +114,9 @@
       },
       "source": [
         "#TEST DATA\n",
-        "!wget https://figshare.com/ndownloader/articles/16856182/versions/1 -O zip_Test1\n",
-        "!unzip /content/zip_Test1 -d /content/Test1\n",
-        "!rm zip_Test1\n",
+        "!wget https://figshare.com/ndownloader/articles/16856182/versions/1 -O zip_Test1 #download zip \n",
+        "!unzip /content/zip_Test1 -d /content/Test1 #extract zip\n",
+        "!rm zip_Test1 #delete zip\n",
         "!wget https://figshare.com/ndownloader/articles/16856248/versions/1 -O zip_Test2\n",
         "!unzip /content/zip_Test2 -d /content/Test2\n",
         "!rm zip_Test2"
@@ -176,9 +176,9 @@
         "id": "wJZ0QZdckXo5"
       },
       "source": [
-        "datapath = \"/content/Test1\"\n",
+        "datapath = \"/content/Test1\" #define path of downloaded data\n",
         "data_test1, x_test1, indx_map_test1 = ut.load_test_data_pipeline(datapath, desired_fs=fs, \n",
-        "                             window_seconds = window_seconds, overlapping = overlapping, zscore=True, binary = False)\n",
+        "                             window_seconds = window_seconds, overlapping = overlapping, zscore=True, binary = False) #load data nad preprocess it according to pipeline defined in \"utils.py\"\n",
         "\n",
         "datapath = \"/content/Test2\"\n",
         "data_test2, x_test2, indx_map_test2 = ut.load_test_data_pipeline(datapath, desired_fs=fs, \n",
